feat: update video rating API, add test routes, update swagger docs, add BE .gitignore
